--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ p{
     font-weight: 200;
     text-align: center;
     margin-top: 4vh;
-    width: 12.5vw;
+    width: 20vw;
     border: 1px bisque solid;
     color: aliceblue;
     transition: background-color 2s;
@@ -59,7 +59,6 @@ p{
     background-color: black;
     color: bisque;
     display: flex;
-    font-size: larger;
     font-family: 'Poppins', sans-serif;
     font-weight: 600;
     flex-direction: row;
@@ -71,6 +70,7 @@ p{
 }
 #home , #about , #portfolio , #contact , #blog {
     cursor: pointer;
+    font-size: 1vw;
 }
 #portfolio_section , #blog_section , #contact_section , #about_section{
     display: flex;
@@ -78,14 +78,74 @@ p{
     align-items: center;
     font-family: 'Poppins', sans-serif;
     font-size: larger;
-    height: 90vh;
     color: aliceblue;
     background-color: black;
     border-bottom: 1px bisque solid;
-
 }
 .sticky {
     position: fixed;
     top: 0;
     width: 100%;
+}
+footer{
+    background-color: black;
+    color: aliceblue;
+}
+footer > p {
+    font-size: 1vw;
+}
+img {
+    width: 15vw;
+    border-radius: 50%;
+}
+a {
+    stroke: none;
+    color: lightskyblue;
+    font-weight: 900;
+    text-decoration: none;
+}
+ul{
+    list-style-type: none;
+}
+li{
+    border-top: 1px bisque solid;
+    border-bottom: 1px bisque solid;
+}
+.intro {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    width: 40vw;
+    margin-top: 50px;
+}
+.intro > fieldset >p {
+    font-size: 1.2vw;
+    width: 400px;
+}
+.container {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    width: 60vw;
+}
+.skills {
+    margin-top: 40px;
+    height: 50vh;
+    width: 40vw;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    justify-content: center;
+}
+#about_section , #portfolio_section{
+    height: 100vh;
+}
+hr {
+    height: 300px;
+    color: bisque;
+}
+fieldset{
+margin-bottom: 100px;
 }
