--- a/style.css
+++ b/style.css
@@ -115,6 +115,29 @@ footer nav {
     align-items: center;
     justify-content: center;
 }
+.formContainer {
+    height: 90vh;
+    width: 80vw;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+form{
+    height: 70vh;
+    width: 300px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+}
+textarea , input{
+    color: black;
+}
+#submit{
+    color: black;
+    width: 150px;
+}
 @media screen and (max-width:768px) {
     .intro {
         font-size: 25px;
